--- a/app.json
+++ b/app.json
@@ -1,9 +1,9 @@
 {
-  "name": "ᴊɪɴᴡᴏᴏ-ᴍᴅ",
+  "name": "cozy-bot-md",
   "version": "2.4.0",
-  "description": "Jinwoo, the best WhatsApp Bot",
+  "description": "COZY bot — a cute and friendly WhatsApp companion for everyone by Cozy",
   "logo": "https://files.catbox.moe/bqs70b.jpg",
-  "keywords": ["whatsapp", "bot", "md"],
+  "keywords": ["whatsapp", "bot", "cozy", "cute"],
   "repository": "https://github.com/kingmalvn/Jinwoo-bot",
   "stack": "container",
   "scripts": {
@@ -11,17 +11,17 @@
   },
   "env": {
     "SESSION_ID": {
-      "description": "Enter your Jinwoo session id here; must start with MALVIN-XD~",
+      "description": "Enter your Cozy bot session id here; must start with MALVIN-XD~",
       "value": "",
       "required": false
     },
     "BOT_NAME": {
       "description": "Enter your bot name here",
-      "value": "ᴊɪɴᴡᴏᴏ-ʙᴏᴛ",
+      "value": "COZY bot",
       "required": false
     },
     "OWNER_NUMBER": {
-      "description": "Enter your number here, starting with country code E.g 2637xxxxxxxx",
+      "description": "Enter your number here, starting with country code e.g., 2637xxxxxxxx",
       "value": "",
       "required": true
     },
@@ -32,16 +32,16 @@
     },
     "STICKER_PACK_NAME": {
       "description": "Sticker pack name",
-      "value": "Jin",
+      "value": "COZY",
       "required": false
     },
     "STICKER_AUTHOR_NAME": {
       "description": "Sticker author name",
-      "value": "Jinwoo",
+      "value": "Cozy",
       "required": false
     },
     "HEROKU_API_KEY": {
-      "description": "Enter heroku API key here",
+      "description": "Enter your Heroku API key here",
       "value": "",
       "required": false
     },
@@ -55,13 +55,13 @@
       "value": "Africa/Nairobi",
       "required": false
     },
-   "GITHUB_TOKEN": {
-  "description": "IMPORTANT: Follow these steps to generate your GitHub token correctly(Bot will not save settings without it!). Go to https://github.com/settings/tokens, select 'Tokens (classic)', then tap 'Generate new token' and select 'Generate new token (classic)'. Enter any note, choose 'No expiration', and under 'Select scopes', tick 'repo'. Scroll down, generate the token, and copy it. Paste it here. If using a single token for multiple bots, change the owner number to avoid settings mixups.",
-  "value": "",
-  "required": false
-}
-},
-    "buildpacks": [
+    "GITHUB_TOKEN": {
+      "description": "IMPORTANT: Follow these steps to generate your GitHub token correctly(Bot will not save settings without it!). Go to https://github.com/settings/tokens, select 'Tokens (classic)', then tap 'Generate new token' and select 'Generate new token (classic)'. Enter any note, choose 'No expiration', and under 'Select scopes', tick 'repo'. Scroll down, generate the token, and copy it. Paste it here. If using a single token for multiple bots, change the owner number to avoid settings mixups.",
+      "value": "",
+      "required": false
+    }
+  },
+  "buildpacks": [
     {
       "url": "heroku/nodejs"
     },
